--- a/src/scss/overlay.scss
+++ b/src/scss/overlay.scss
@@ -1,81 +1,8 @@
 .overlay {
     position: absolute;
     top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-    z-index: 2;
 
-    .top-bar {
-        position: absolute;
-        top: 0;
-        width: 100%;
-        height: 10%;
-
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        pointer-events: all;
-    }
-    .left-bar {
-        position: absolute;
-        background-color: rgba(255, 192, 203, 0.267);
-        top: 0;
-        width: 15%;
-        height: 100%;
-        pointer-events: all;
-
-        .rooms-list {
-            height: 100%;
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-
-            .room-button {
-                padding-top: 1em;
-                padding-bottom: 1em;
-                width: 50%;
-                // background-color: green;
-
-                display: flex;
-                justify-content: center;
-                align-items: center;
-
-                button {
-                    cursor: pointer;
-                }
-            }
-        }
-
-        .provisoire-selected-room {
-            color: white;
-        }
-    }
-    .right-bar {
-        position: absolute;
-        background-color: rgba(255, 192, 203, 0.267);
-        top: 0;
-        right: 0;
-        width: 15%;
-        height: 100%;
-
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        pointer-events: all;
-
-        .level-buttons-container {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            height: 80%;
-
-            button {
-                padding: 1em;
-                cursor: pointer;
-            }
-        }
+    .test {
+        color: white;
     }
 }
